--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
     <img src="/images/croissant.png" />
     <footer>
       <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
+      <a href="/photo.html" alt="Delicious Croissants">Photo</a>
       <a href="/contact.html">Contact</a>
     </footer>
   </body>
