--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Best Croissants in Mexico | SheCodes</title>
+    <title>The Best Croissants in Mexico | Croissants.com</title>
 
     <link rel="stylesheet" href="styles.css" />
 
@@ -21,9 +21,9 @@
       pastry of Austrian origin,[1] but mostly associated with France.
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
     </footer>
   </body>
 </html>
