--- a/photo.html
+++ b/photo.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissants | Photo</title>
+    <title>A Delicious Picture of a Croissants | Croissants.com About</title>
 
     <link rel="stylesheet" href="styles.css" />
+
+    <meta
+      name="description"
+      content="Here is a picture of a croissant that is a buttery, and flaky."
+    />
   </head>
   <body>
     <h1>🥐 A Picture of a Croissants</h1>
     <img src="/images/croissant.png" />
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html" alt="Delicious Croissants">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
     </footer>
   </body>
 </html>
